# ctrl_alt_defeat

./: CMakeLists.txt
levels/: common.h
levels/hardcode/: main.c  out.dasm  out.elf
levels/length/: main.c  out.dasm  out.elf
levels/needle/: list.py  main.c  out.dasm  out.elf
levels/offset/: build.sh  main.c  out.dasm  out.elf
levels/overflow/: build.sh  main.c  out.dasm  out.elf
levels/simple/: main.c  out.dasm  out.elf
levels/strcmp/: build.sh  main.c  out.dasm  out.elf
levels/template/: build.sh  entry.S  link.ld  main.c  out.dasm  out.elf
libs/imgui/: CMakeLists.txt
rv32i_model/: CMakeLists.txt  elf.cpp  elf.h  memory.h  model.cpp  model.h
rv32i_model/obj_dir/: Vrv32i.cpp  Vrv32i.h  Vrv32i.mk  Vrv32i__Syms.cpp  Vrv32i__Syms.h  Vrv32i__ver.d  Vrv32i_classes.mk  Vrv32i_cpu_t.cpp  Vrv32i_cpu_t.h  Vrv32i_cpu_t.mk  Vrv32i_cpu_t__Syms.cpp  Vrv32i_cpu_t__Syms.h  Vrv32i_cpu_t__ver.d  Vrv32i_cpu_t_classes.mk
rv32i_model/rtl/: rv32i.v
rv32i_model/tests/: runtests.py
rv32i_model/tests/c/: build.sh  entry.S  main.c
rv32i_model/verilator/include/: verilated_config.h  verilated_heavy.h
source/: dasm_help.h  encoding.cpp  encoding.h  levels.h  main.cpp
